--- a/public/src/pages/index/index.html
+++ b/public/src/pages/index/index.html
@@ -1,3 +1,40 @@
-<p>Hello {{ user }}! Welcome to PicStar</p>
+<div class="challenges-container">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="main-challenge-container challenge-current">
+				<h2><span>monthly</span> challenge</h2>
+				<div challenge ng-repeat="challenge in lastMonthly" challenge-type="monthly"></div>
+			</div>
+		</div>
+		<div class="col-md-8">
+			<div class="main-challenge-container challenge-list">
+				<h2><span>Previous</span> monthly challenge</h2>
+				<div class="row">
+					<div challenge class="col-md-4" ng-repeat="challenge in latestMonthly" challenge-type="monthly"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+		
+<div class="challenges-container">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="main-challenge-container challenge-current">
+				<h2><span>weekly</span> challenge</h2>
+				<div challenge ng-repeat="challenge in lastWeekly"  challenge-type="weekly"></div>
+			</div>
+		</div>
+		<div class="col-md-8">
+			<div class="main-challenge-container challenge-list">
+				<h2><span>Previous</span> weekly challenge</h2>
+				<div class="row">
+					<div challenge class="col-md-4" ng-repeat="challenge in latestWeekly" challenge-type="weekly"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+		
+</div>
 
-<a href="challenge">Challenges</a>
+<!-- <a href="/challenges/{{  }}"></a> -->
