--- a/public/src/index.html
+++ b/public/src/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <title>PicStar</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+        <link rel="stylesheet" type="text/css" href="/tmp/assets/css/styles.css">
         <base href="/">
     </head>
     <body>
@@ -15,8 +17,8 @@
            	<div class="view-footer" data-ui-view="footer"></div>
         </div>
 
-        <script type="text/javascript" src="assets/js/vendor.js"></script>
-        <script type="text/javascript" src="assets/js/templates.js"></script>
-        <script type="text/javascript" src="assets/js/app.js"></script>
+        <script type="text/javascript" src="/tmp/assets/js/vendor.js"></script>
+        <script type="text/javascript" src="/tmp/assets/js/templates.js"></script>
+        <script type="text/javascript" src="/tmp/assets/js/app.js"></script>
     </body>
 </html>
