Added some logic

--- a/public/src/pages/challenges/challenges.html
+++ b/public/src/pages/challenges/challenges.html
@@ -1,1 +1,3 @@
 <p>Welcome to all challenges</p>
+
+<div challenge class="col-md-3" content="true" ng-repeat="challenge in challenges | orderBy: end.date"></div>
