--- a/public/src/pages/login/login.html
+++ b/public/src/pages/login/login.html
@@ -1,1 +1,3 @@
-<div login clicked="popupLogin()"></div>
+<div class="col-md-4 col-md-offset-4">
+	<div login clicked="popupLogin()" class="nopopup"></div>
+</div> 	
